--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
     <title>publicradio.info</title>
     <style type="text/css">
       html {
-        border: 2px solid blue;
+        border-bottom: 20px solid blue;
         text-align: center;
       }
 
@@ -44,9 +44,10 @@
 
     <div id="main">
 
-  <h1>1. Main Program: "Jonny O: The Pirate's Story" (documentary) from KCRW's Cargoland</h1>
-  <img src="https://ia902602.us.archive.org/25/items/feature_201502/feature.jpg">
+    <img src="https://ia902602.us.archive.org/25/items/feature_201502/feature.jpg">
   <audio src="http://download.kcrw.com/audio/2401660/cg_2014-12-06-123200.mp3" controls></audio>
+  <h4>1. Main Program: "Jonny O: The Pirate's Story" (documentary) from KCRW's Cargoland</h4>
+
   <p><a href="http://feeds.kcrw.com/~r/kcrw/cg/~5/dTmraBbbcoY/cg_2014-12-06-123200.6929.mp3">Listen</a> | <a href="http://cargoland.kcrw.com/">Visit website</a> | <a href="http://feeds.kcrw.com/kcrw/cg">Subscribe</a></p>
 </div>
 
@@ -114,7 +115,7 @@
 
   <p>"Louis Armstrong on Desert Island Discs" from Radio 4's Desert Island Discs (1968) (interview)
   <br />
-  <a href="http://downloads.bbc.co.uk/podcasts/radio4/dida70/dida70_20150131-0102a.mp3">Download</a> | <a href="http://www.bbc.co.uk/programmes/p009y1rb">Visite website</a>
+  <a href="http://downloads.bbc.co.uk/podcasts/radio4/dida70/dida70_20150131-0102a.mp3">Listen</a> | <a href="http://www.bbc.co.uk/programmes/p009y1rb">Visite website</a>
   </p>
 
 </div>
